--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ InitTestScene*.unity*
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
 Assets/3. Unity Book/99. Resources/mixamo/**
+Assets/TerrainDemoScene_URP/**
